--- a/style.css
+++ b/style.css
@@ -1,90 +1,174 @@
-:root{
-  --light-green-color:#E1EDE6;
-  --font:"Raleway",sana-serif;
-  --font-size-twenty:20px;
+:root {
+  --light-green-color: #E1EDE6;
+  --font: "Raleway", sans-serif;
+  --font-size-twenty: 20px;
   --black-color: #2C2D35;
-  --green-color:#376B44;
+  --green-color: #598D66;
   --grey-color: #86928B;
-  --font-size-eighteen: 19px;
-  --font-wight-medium:500;
+  --font-size-eighteen: 18px;
+  --font-weight-medium: 500;
+  --white-color:#F4F6F5;
+  --medium-green-color:#D4E8D9;
 }
-*{
+
+* {
   margin: 0;
   padding: 0;
 }
-body{
+body,button{
+  font-family:var(--font) ;
+}
+
+body {
   font-family: var(--font);
 }
-.container{
+
+.container {
   margin: 0 auto;
 }
-@media (min-widht: 1440px){
-  .container{
-    max-width: 1110px;
+@media (min-width: 1440px) {
+  .container {
+      max-width: 1110px;
   }
-  .header-link{
-    font-size: var(--font-size-twenty);
+  .header-link {
+      font-size: var(--font-size-twenty);
   }
-  .about-button{
-    padding:19px 52px 19px 52px ;
+  .about-right {
+      width: 540px;
+  }
+  .about-title {
+      font-size: 60px;
+  }
+  .about-button {
+      padding: 21px 60px;
+  }
+  .works-up-title{
+    font-size: 40px;
+  }
+  .work-example{
+    width: 310px ;
   }
 }
-.header{
+
+.header {
   background-color: var(--light-green-color);
   padding: 33px 0 32px 0;
 }
-.header-link{
-  font-size: var(--font-size-twenty);
+.header-link {
   color: var(--black-color);
   text-decoration: none;
   margin-right: 60px;
-  font-weight: var(--font-wight-medium);
+  font-weight: var(--font-weight-medium);
 }
-.header-flex{
+.header-flex {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.header-button{
+.header-button {
   border: none;
   background: none;
 }
-.header-links{
+.header-links {
   display: flex;
   align-items: center;
 }
-.about{
+.about {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.about-right{
-  width: 540px;
+.about-title {
+  font-weight: var(--font-weight-medium);
 }
-.about-title{
-  font-weight:var(--font-wight-medium) ;
-}
-.about-title span{
+.about-title span {
   color: var(--green-color);
 }
-.about-text{
+.about-text {
   color: var(--grey-color);
   font-size: var(--font-size-eighteen);
   margin: 20px 0 60px 0;
 }
-.about-button{
-    font-size:var(--font-size-twenty);
-    color:var(--green-color);
-    font-family: var(--font);
-    border: 1px solid var(--green-color) ;
-    background: none;
-    font-weight: var(--font-wight-medium);
+.about-button {
+  font-family: var(--font);
+  font-size: var(--font-size-twenty);
+  color: var(--green-color);
+  border: 1px solid var(--green-color);
+  background: none;
+  font-weight: var(--font-weight-medium);
+}
+.works-up{
+  display: flex;
+  justify-content: space-between;
+  margin: 70px auto 30px auto;
+}
+.works-up-title{
+  font-weight: var(--font-weight-medium);
+  color: var(--black-color);
+}
+.works-buttom-active{
+  padding: 10px 20px;
+  font-size: var(--font-size-twenty);
+  font-weight: var(--font-weight-medium);
+  color: var(--white-color);
+  background-color: var(--green-color);
+  border: none;
+  border-radius: 20px;
+}
+.works-buttom{
+  padding: 10px 20px;
+  font-size: var(--font-size-twenty);
+  font-weight: var(--font-weight-medium);
+  color: var(--black-color);
+  background-color:var(--medium-green-color);
+  border: none;
+  border-radius: 20px;
+}
+.works-second-buttom{
+  margin: 0 32px;
+}
+.work-example{
+  background-color: var(--light-green-color);
+  padding: 20px 20px 30px 20px;
+}
+.work-artist{
+  font-weight: var(--font-weight-medium);
+  font-size: var(--font-size-eighteen);
+  color: var(--grey-color);
+  margin-top: 20px;
+  margin-bottom: 10px;
+  width: fit-content;
+}
+.work-name{
+  font-weight: var(--font-weight-medium);
+  font-size: 30px;
+  color: var(--black-color);
+  width: fit-content;
+}
+.work-type{
+  font-weight: var(--font-weight-medium);
+  font-size: var(--font-size-eighteen);
+  color: var(--black-color);
+  margin-top: 8px;
+  margin-bottom: 30px;
+  width: fit-content;
+}
+.work-price{
+  font-weight: var(--font-weight-medium);
+  font-size: 24px;
+  color: var(--green-color);
+  width: fit-content;
+}
+.work-buy{
+  font-weight: var(--font-weight-medium);
+  font-size: var(--font-size-eighteen);
+  color: var(--green-color);
+  padding: 21px 100px;
+  background-color: none;
+  margin-top: 20px;
 }
 
-
-
-
-
+/*
 .content {
     padding: 20px;
     margin: 10px 0;
@@ -163,4 +247,4 @@ body{
  
 .reprodukcui{
   display: flex;
-}
+}*/
